fix l'alignement vertical des images dans le rendu (chromium)

--- a/src/app/content/classement/classement-edit.component.scss
+++ b/src/app/content/classement/classement-edit.component.scss
@@ -251,7 +251,12 @@ svg.color + svg {
     .drop-list {
         display: table-cell; // fix chromium
         div {
-            display: inline-block; // fix chromium
+            display: inline-flex; // fix chromium
+            text-align: center;
+            vertical-align: bottom;
+            div {
+                display: flex;
+            }
         }
     }
 
